#INNOVATION-92 by magnify: Fixed page spacing

--- a/sites/all/themes/cfia/scss/components/_itk-boxlist.scss
+++ b/sites/all/themes/cfia/scss/components/_itk-boxlist.scss
@@ -122,9 +122,9 @@ $boxlist-padding:                       1em;
   margin-right: -6em;
   margin-bottom: 3em;
   margin-left: -6em;
-  padding-right: 7.8em;
+  padding-right: 6em;
   padding-bottom: 3em;
-  padding-left: 7.8em;
+  padding-left: 6em;
 
   &--header-text {
     margin-bottom: 1em;
